--- a/website/docs/changelog/1.4.7.md
+++ b/website/docs/changelog/1.4.7.md
@@ -9,3 +9,4 @@ Not yet released.
 - fixed js error on OpenAdmin `/security/waf/view-rules?edit=/etc/openpanel/caddy/coreruleset/rules/REQUEST-941-APPLICATION-ATTACK-XSS.conf`
 - fixed js issue with decimals on *OpenAdmin > Dashboard > resource usage* widget for Load.
 - fixed bug with `opencli php-default` failing to change version.
+- fixed bug with cPanel import failing to set custom docroot for domains.
