--- a/website/docs/changelog/1.4.7.md
+++ b/website/docs/changelog/1.4.7.md
@@ -10,3 +10,4 @@ Not yet released.
 - fixed js issue with decimals on *OpenAdmin > Dashboard > resource usage* widget for Load.
 - fixed bug with `opencli php-default` failing to change version.
 - fixed bug with cPanel import failing to set custom docroot for domains.
+- fixed bug with cPanel import failing to change nameservers in zone file.
