--- a/website/docs/changelog/1.4.7.md
+++ b/website/docs/changelog/1.4.7.md
@@ -11,3 +11,6 @@ Not yet released.
 - fixed bug with `opencli php-default` failing to change version.
 - fixed bug with cPanel import failing to set custom docroot for domains.
 - fixed bug with cPanel import failing to change nameservers in zone file.
+- fixed bug with cPanel import logging each domain import twice.
+- fixed bug with cPanel import failing due to low inodes or disk limit on the Hosting Package.
+  
