--- a/website/docs/changelog/1.4.7.md
+++ b/website/docs/changelog/1.4.7.md
@@ -13,4 +13,6 @@ Not yet released.
 - fixed bug with cPanel import failing to change nameservers in zone file.
 - fixed bug with cPanel import logging each domain import twice.
 - fixed bug with cPanel import failing due to low inodes or disk limit on the Hosting Package.
+- fixed bug with `opencli user-change_plan` faiing to enforce disk limit form the plan.
+- fixed bug in *OpenAdmin > Users > single user* for Storage resulting usage in Blocks instead of GB.
   
