--- a/website/docs/changelog/1.4.7.md
+++ b/website/docs/changelog/1.4.7.md
@@ -15,4 +15,5 @@ Not yet released.
 - fixed bug with cPanel import failing due to low inodes or disk limit on the Hosting Package.
 - fixed bug with `opencli user-change_plan` faiing to enforce disk limit form the plan.
 - fixed bug in *OpenAdmin > Users > single user* for Storage resulting usage in Blocks instead of GB.
+- [Bug in OpenAdmin UI: Users page shows incorrect inodes usage when account is over quota #548](https://github.com/stefanpejcic/OpenPanel/issues/548)
   
