--- a/website/docs/changelog/1.4.7.md
+++ b/website/docs/changelog/1.4.7.md
@@ -16,4 +16,5 @@ Not yet released.
 - fixed bug with `opencli user-change_plan` faiing to enforce disk limit form the plan.
 - fixed bug in *OpenAdmin > Users > single user* for Storage resulting usage in Blocks instead of GB.
 - [Bug in OpenAdmin UI: Users page shows incorrect inodes usage when account is over quota #548](https://github.com/stefanpejcic/OpenPanel/issues/548)
-- fixed css issue on *OpenAdmin > Users > single user* activity table for amdin actions.
+- fixed css issue on *OpenAdmin > Users > single user* activity table for admin actions.
+- fixed css issue on *OpenAdmin > Users > single user* with disk and inodes usage represented over 100% on the graphs.
