--- a/website/docs/changelog/1.4.7.md
+++ b/website/docs/changelog/1.4.7.md
@@ -1,6 +1,7 @@
 Not yet released.
 
 ### 💅 Polish
+- Inodes usage on *OpenAdmin > Users > single user* is now not rounded in millions if less than 1M.
 
 ### 🐛 Bug Fixes
 - [Error creating new Package #544](https://github.com/stefanpejcic/OpenPanel/issues/544)
