--- a/website/docs/changelog/1.4.7.md
+++ b/website/docs/changelog/1.4.7.md
@@ -19,3 +19,4 @@ Not yet released.
 - [Bug in OpenAdmin UI: Users page shows incorrect inodes usage when account is over quota #548](https://github.com/stefanpejcic/OpenPanel/issues/548)
 - fixed css issue on *OpenAdmin > Users > single user* activity table for admin actions.
 - fixed css issue on *OpenAdmin > Users > single user* with disk and inodes usage represented over 100% on the graphs.
+- fixed bug with json repsonse on suspending domains from OpenPanel UI.
