--- a/website/docs/changelog/1.4.7.md
+++ b/website/docs/changelog/1.4.7.md
@@ -20,3 +20,4 @@ Not yet released.
 - fixed css issue on *OpenAdmin > Users > single user* activity table for admin actions.
 - fixed css issue on *OpenAdmin > Users > single user* with disk and inodes usage represented over 100% on the graphs.
 - fixed bug with json repsonse on suspending domains from OpenPanel UI.
+- fixed multiple bugs with `opencli websites-scan` script.
