--- a/website/docs/changelog/1.4.7.md
+++ b/website/docs/changelog/1.4.7.md
@@ -2,6 +2,7 @@ Not yet released.
 
 ### 💅 Polish
 - Inodes usage on *OpenAdmin > Users > single user* is now not rounded in millions if less than 1M.
+- added option to restore default extensions in [*OpenAdmin > Settings > OpenPanel > File Manager*](https://i.postimg.cc/rydPd9z4/2025-07-03-16-38.png).
 
 ### 🐛 Bug Fixes
 - [Error creating new Package #544](https://github.com/stefanpejcic/OpenPanel/issues/544)
