--- a/website/docs/changelog/1.4.7.md
+++ b/website/docs/changelog/1.4.7.md
@@ -4,6 +4,7 @@ Not yet released.
 - Inodes usage on *OpenAdmin > Users > single user* is now not rounded in millions if less than 1M.
 - added option to restore default extensions in [*OpenAdmin > Settings > OpenPanel > File Manager*](https://i.postimg.cc/rydPd9z4/2025-07-03-16-38.png).
 - added logo preview on [*OpenAdmin > Settings > OpenPanel > Logo*](https://i.postimg.cc/5xhYd4LM/2025-07-03-16-42.png).
+- `repquota` is added to the list of restricted usernames.
 
 ### 🐛 Bug Fixes
 - [Error creating new Package #544](https://github.com/stefanpejcic/OpenPanel/issues/544)
