--- a/website/docs/changelog/1.4.7.md
+++ b/website/docs/changelog/1.4.7.md
@@ -5,6 +5,7 @@ Not yet released.
 - added option to restore default extensions in [*OpenAdmin > Settings > OpenPanel > File Manager*](https://i.postimg.cc/rydPd9z4/2025-07-03-16-38.png).
 - added logo preview on [*OpenAdmin > Settings > OpenPanel > Logo*](https://i.postimg.cc/5xhYd4LM/2025-07-03-16-42.png).
 - `repquota` is added to the list of restricted usernames.
+- `opencli docker-images <USERNAME>` is implemented.
 
 ### 🐛 Bug Fixes
 - [Error creating new Package #544](https://github.com/stefanpejcic/OpenPanel/issues/544)
