--- a/website/docs/changelog/1.4.7.md
+++ b/website/docs/changelog/1.4.7.md
@@ -6,6 +6,7 @@ Not yet released.
 - added logo preview on [*OpenAdmin > Settings > OpenPanel > Logo*](https://i.postimg.cc/5xhYd4LM/2025-07-03-16-42.png).
 - `repquota` is added to the list of restricted usernames.
 - `opencli docker-images <USERNAME>` is implemented.
+- user selected locale is now stored for the account.
 
 ### 🐛 Bug Fixes
 - [Error creating new Package #544](https://github.com/stefanpejcic/OpenPanel/issues/544)
