--- a/website/docs/changelog/1.4.7.md
+++ b/website/docs/changelog/1.4.7.md
@@ -7,6 +7,7 @@ Released on July 04, 2025
 - `repquota` is added to the list of restricted usernames.
 - `opencli docker-images <USERNAME>` is implemented.
 - user selected locale is now stored for the account.
+- Web Terminals in both OpenAdmin and OpenPanel now support paste functionality and arrow key command history.
 
 ### 🐛 Bug Fixes
 - [Error creating new Package #544](https://github.com/stefanpejcic/OpenPanel/issues/544)
