--- a/website/docs/changelog/1.4.8.md
+++ b/website/docs/changelog/1.4.8.md
@@ -4,3 +4,4 @@ Not yet released.
 - Images are removed from *OpenPanel > Account > 2FA* page.
 
 ### 🐛 Bug Fixes
+- fixed bug with **MySQL > Import** missing in sidebar menu when `mysql_import` is enabled.
