--- a/website/docs/changelog/1.4.8.md
+++ b/website/docs/changelog/1.4.8.md
@@ -7,3 +7,5 @@ Not yet released.
 - [Update documentation #450](https://github.com/stefanpejcic/OpenPanel/issues/450)
 - [Document OpenAdmin > Modules #538](https://github.com/stefanpejcic/OpenPanel/issues/538)
 - fixed bug with **MySQL > Import** missing in sidebar menu when `mysql_import` is enabled.
+- fixed 500 bug on *OpenAdmin > Users* when `/etc/openpanel/openpanel/core/users/` directory is deleted.
+- 
