--- a/website/docs/changelog/1.4.8.md
+++ b/website/docs/changelog/1.4.8.md
@@ -8,4 +8,10 @@ Not yet released.
 - [Document OpenAdmin > Modules #538](https://github.com/stefanpejcic/OpenPanel/issues/538)
 - fixed bug with **MySQL > Import** missing in sidebar menu when `mysql_import` is enabled.
 - fixed 500 bug on *OpenAdmin > Users* when `/etc/openpanel/openpanel/core/users/` directory is deleted.
-- 
+- fixed error adding nodejs app in SiteManager: `1366 (HY000): Incorrect integer value: 'APPNAME_NODE' for column 'ports' at row 1`
+
+
+
+```
+ALTER TABLE sites MODIFY COLUMN ports VARCHAR(255);
+```
