--- a/website/docs/changelog/1.4.8.md
+++ b/website/docs/changelog/1.4.8.md
@@ -9,7 +9,7 @@ Not yet released.
 - fixed bug with **MySQL > Import** missing in sidebar menu when `mysql_import` is enabled.
 - fixed 500 bug on *OpenAdmin > Users* when `/etc/openpanel/openpanel/core/users/` directory is deleted.
 - fixed error adding nodejs app in SiteManager: `1366 (HY000): Incorrect integer value: 'APPNAME_NODE' for column 'ports' at row 1`
-
+- fixed missing port `:8080`from webmail url when domain is not configured.
 
 
 ```
