--- a/website/docs/changelog/1.4.8.md
+++ b/website/docs/changelog/1.4.8.md
@@ -2,6 +2,7 @@ Not yet released.
 
 ### 💅 Polish
 - Images are removed from *OpenPanel > Account > 2FA* page.
+- Hosting Plan is now listed in *OpenPanel > Dashboard > Information* widget.
 
 ### 🐛 Bug Fixes
 - [Update documentation #450](https://github.com/stefanpejcic/OpenPanel/issues/450)
