--- a/website/docs/changelog/1.4.8.md
+++ b/website/docs/changelog/1.4.8.md
@@ -3,6 +3,7 @@ Not yet released.
 ### 💅 Polish
 - Images are removed from *OpenPanel > Account > 2FA* page.
 - Hosting Plan is now listed in *OpenPanel > Dashboard > Information* widget.
+- cron service is now installed for new installations.
 
 ### 🐛 Bug Fixes
 - [Update documentation #450](https://github.com/stefanpejcic/OpenPanel/issues/450)
