--- a/website/docs/changelog/1.4.8.md
+++ b/website/docs/changelog/1.4.8.md
@@ -5,7 +5,7 @@ Not yet released.
 - Hosting Plan is now listed in *OpenPanel > Dashboard > Information* widget.
 - cron service is now installed for new installations.
 - start/stop of docker service by user will now trigger recalculating their cpu/ram usage.
-- `/website/node_info/` route is removed.
+- `/website/node_info/<path:site_name>` and `/website/py_info/<path:site_name>` routes are removed.
 
 ### 🐛 Bug Fixes
 - [Update documentation #450](https://github.com/stefanpejcic/OpenPanel/issues/450)
