--- a/website/docs/changelog/1.4.8.md
+++ b/website/docs/changelog/1.4.8.md
@@ -10,6 +10,7 @@ Not yet released.
 ### 🐛 Bug Fixes
 - [Update documentation #450](https://github.com/stefanpejcic/OpenPanel/issues/450)
 - [Document OpenAdmin > Modules #538](https://github.com/stefanpejcic/OpenPanel/issues/538)
+- fixed js error `Uncaught TypeError: Assignment to constant variable.` on PageSpeed when limits are reached.
 - fixed bug with **MySQL > Import** missing in sidebar menu when `mysql_import` is enabled.
 - fixed 500 bug on *OpenAdmin > Users* when `/etc/openpanel/openpanel/core/users/` directory is deleted.
 - fixed error adding nodejs app in SiteManager: `1366 (HY000): Incorrect integer value: 'APPNAME_NODE' for column 'ports' at row 1`
