--- a/website/docs/changelog/1.4.8.md
+++ b/website/docs/changelog/1.4.8.md
@@ -1,11 +1,13 @@
 Not yet released.
 
 ### 💅 Polish
+- [Improvements to the NodeJS/Python App Manager interface](https://i.postimg.cc/SmpVJF2f/2025-07-08-13-56.png).
 - Images are removed from *OpenPanel > Account > 2FA* page.
 - Hosting Plan is now listed in *OpenPanel > Dashboard > Information* widget.
 - cron service is now installed for new installations.
 - start/stop of docker service by user will now trigger recalculating their cpu/ram usage.
 - `/website/node_info/<path:site_name>` and `/website/py_info/<path:site_name>` routes are removed.
+- `/manager/python.html` and `/manager/nodejs.html` templates are now merged in `python_node_apps.html`
 
 ### 🐛 Bug Fixes
 - [Update documentation #450](https://github.com/stefanpejcic/OpenPanel/issues/450)
