--- a/website/docs/changelog/1.4.8.md
+++ b/website/docs/changelog/1.4.8.md
@@ -17,4 +17,5 @@ Not yet released.
 - fixed 500 bug on *OpenAdmin > Users* when `/etc/openpanel/openpanel/core/users/` directory is deleted.
 - fixed error adding nodejs app in SiteManager: `1366 (HY000): Incorrect integer value: 'APPNAME_NODE' for column 'ports' at row 1`
 - fixed missing port `:8080`from webmail url when domain is not configured.
+- fixed `Error accessing file size: [Errno 2] No such file or directory` when trying to insert pagespeed api key usinf WP Manager.
 
