--- a/website/docs/changelog/1.4.8.md
+++ b/website/docs/changelog/1.4.8.md
@@ -18,4 +18,5 @@ Not yet released.
 - fixed error adding nodejs app in SiteManager: `1366 (HY000): Incorrect integer value: 'APPNAME_NODE' for column 'ports' at row 1`
 - fixed missing port `:8080`from webmail url when domain is not configured.
 - fixed `Error accessing file size: [Errno 2] No such file or directory` when trying to insert pagespeed api key usinf WP Manager.
+- fixed bug with `root` owning nginx vhost files for new domains.
 
