--- a/website/docs/changelog/1.4.8.md
+++ b/website/docs/changelog/1.4.8.md
@@ -2,6 +2,7 @@ Not yet released.
 
 ### 💅 Polish
 - [Improvements to the NodeJS/Python App Manager interface](https://i.postimg.cc/SmpVJF2f/2025-07-08-13-56.png).
+- [Improvements to Domains page](https://i.postimg.cc/KcjbpHxV/2025-07-08-17-18.png).
 - Images are removed from *OpenPanel > Account > 2FA* page.
 - Hosting Plan is now listed in *OpenPanel > Dashboard > Information* widget.
 - cron service is now installed for new installations.
