--- a/website/docs/changelog/1.4.8.md
+++ b/website/docs/changelog/1.4.8.md
@@ -10,6 +10,7 @@ Not yet released.
 - start/stop of docker service by user will now trigger recalculating their cpu/ram usage.
 - `/website/node_info/<path:site_name>` and `/website/py_info/<path:site_name>` routes are removed.
 - `/manager/python.html` and `/manager/nodejs.html` templates are now merged in `python_node_apps.html`
+- *OpenPanel > FTP Accounts* now displays UID and GID for each ftp account.
 
 ### 🐛 Bug Fixes
 - [Update documentation #450](https://github.com/stefanpejcic/OpenPanel/issues/450)
