--- a/website/docs/changelog/1.4.9.md
+++ b/website/docs/changelog/1.4.9.md
@@ -1,4 +1,4 @@
 Not yet released.
 
 ### 🐛 Bug Fixes
-- fixed bug with checking if IDN domains are owned by the user, on /websites page.
+- fixed several bugs on `/websites` page when IDN domain name is used.
