--- a/website/docs/changelog/1.4.9.md
+++ b/website/docs/changelog/1.4.9.md
@@ -2,3 +2,4 @@ Not yet released.
 
 ### 🐛 Bug Fixes
 - fixed several bugs on `/websites` page when IDN domain name is used.
+- fixed issue preventing dedicated ip address to be displayed for users on *OpenAdmin > Users* table.
