--- a/website/docs/changelog/1.4.9.md
+++ b/website/docs/changelog/1.4.9.md
@@ -1,5 +1,10 @@
 Not yet released.
 
+### 💅 Polish
+- optimized `/jsom/ips` page on OpenAdmin.
+- changing ip address for user now immediately invalidates all cache.
+- *OpenAdmin > Users* table now indicates dedicated ip address for user.
+
 ### 🐛 Bug Fixes
 - fixed several bugs on `/websites` page when IDN domain name is used.
 - fixed issue preventing dedicated ip address to be displayed for users on *OpenAdmin > Users* table.
