--- a/website/docs/changelog/1.4.9.md
+++ b/website/docs/changelog/1.4.9.md
@@ -4,6 +4,7 @@ Not yet released.
 - optimized `/jsom/ips` page on OpenAdmin.
 - changing ip address for user now immediately invalidates all cache.
 - *OpenAdmin > Users* table now indicates dedicated ip address for user.
+- [IP is no longer enforced for OpenPanel UI access when IP address is used](https://github.com/stefanpejcic/OpenPanel/discussions/553#discussioncomment-13733616)
 
 ### 🐛 Bug Fixes
 - fixed several bugs on `/websites` page when IDN domain name is used.
