--- a/website/docs/changelog/1.4.9.md
+++ b/website/docs/changelog/1.4.9.md
@@ -10,3 +10,4 @@ Not yet released.
 - fixed several bugs on `/websites` page when IDN domain name is used.
 - fixed issue preventing dedicated ip address to be displayed for users on *OpenAdmin > Users* table.
 - fixed bug setting user's dedicated ip address in DNS zone for new domains.
+- [Bug in OpenPanel UI on /website - delete Node/Py app not working #558](https://github.com/stefanpejcic/OpenPanel/issues/558)
