--- a/website/docs/changelog/1.4.9.md
+++ b/website/docs/changelog/1.4.9.md
@@ -5,6 +5,8 @@ Not yet released.
 - changing ip address for user now immediately invalidates all cache.
 - *OpenAdmin > Users* table now indicates dedicated ip address for user.
 - [IP is no longer enforced for OpenPanel UI access when IP address is used](https://github.com/stefanpejcic/OpenPanel/discussions/553#discussioncomment-13733616)
+- `opencli websites-google_indexed` is removed.
+
 
 ### 🐛 Bug Fixes
 - fixed several bugs on `/websites` page when IDN domain name is used.
