--- a/website/docs/changelog/1.4.9.md
+++ b/website/docs/changelog/1.4.9.md
@@ -15,3 +15,4 @@ Not yet released.
 - [Bug in OpenPanel UI on /website - delete Node/Py app not working #558](https://github.com/stefanpejcic/OpenPanel/issues/558)
 - fixed *Warning: invalid webserver type selected: openresty. Must be 'nginx', 'apache', 'openresty', 'varnish+nginx', 'varnish+apache' or 'varnish+openresty'. Using the default instead..* when openresty is set.
 - [Can't Enable/Disable container on user Services on OpenAdmin #566](https://github.com/stefanpejcic/OpenPanel/issues/566)
+- [Showing old metric after resource update #565](https://github.com/stefanpejcic/OpenPanel/issues/565)
