--- a/website/docs/changelog/1.4.9.md
+++ b/website/docs/changelog/1.4.9.md
@@ -1,7 +1,7 @@
 Not yet released.
 
 ### 💅 Polish
-- optimized `/jsom/ips` page on OpenAdmin.
+- optimized `/json/ips` page on OpenAdmin.
 - changing ip address for user now immediately invalidates all cache.
 - *OpenAdmin > Users* table now indicates dedicated ip address for user.
 - [IP is no longer enforced for OpenPanel UI access when IP address is used](https://github.com/stefanpejcic/OpenPanel/discussions/553#discussioncomment-13733616)
