--- a/website/docs/changelog/1.4.9.md
+++ b/website/docs/changelog/1.4.9.md
@@ -6,6 +6,7 @@ Not yet released.
 - *OpenAdmin > Users* table now indicates dedicated ip address for user.
 - [IP is no longer enforced for OpenPanel UI access when IP address is used](https://github.com/stefanpejcic/OpenPanel/discussions/553#discussioncomment-13733616)
 - `opencli websites-google_indexed` is removed.
+- [*OpenAdmin > Users > single user* page no longer displays 500 error when docker stats for user are missing](https://i.postimg.cc/PT9gyNN9/2025-07-14-14-42.png).
 
 
 ### 🐛 Bug Fixes
