--- a/website/docs/changelog/1.4.9.md
+++ b/website/docs/changelog/1.4.9.md
@@ -8,7 +8,7 @@ Not yet released.
 - `opencli websites-google_indexed` is removed.
 - [*OpenAdmin > Users > single user* page no longer displays 500 error when docker stats for user are missing](https://i.postimg.cc/PT9gyNN9/2025-07-14-14-42.png).
 - `/get_user_stats` route on OpenAdmin is removed.
-- 
+- [[Enhancement] Make this date human readable #555](https://github.com/stefanpejcic/OpenPanel/issues/555)
 
 
 ### 🐛 Bug Fixes
