--- a/website/docs/changelog/1.4.9.md
+++ b/website/docs/changelog/1.4.9.md
@@ -20,3 +20,4 @@ Not yet released.
 - [Can't Enable/Disable container on user Services on OpenAdmin #566](https://github.com/stefanpejcic/OpenPanel/issues/566)
 - [Showing old metric after resource update #565](https://github.com/stefanpejcic/OpenPanel/issues/565)
 - fixed js bug `Uncaught SyntaxError: redeclaration of const files` preventing file uploads in File Manager.
+- fixed css bug with actions dropdown not visible on *OpenPanel > Domains* by default.
