--- a/website/docs/changelog/1.4.9.md
+++ b/website/docs/changelog/1.4.9.md
@@ -1,6 +1,8 @@
 Released on July 14, 2025
 
 ### 💅 Polish
+- `opencli domains-user` and `opencli domains-all` scripts now accept optional flags to display document root or php version.
+- `opencli domains-add` now accepts optional flags to skip creating virtualhost files, reverse proxy, dns zones, or starting services.
 - optimized `/json/ips` page on OpenAdmin.
 - changing ip address for user now immediately invalidates all cache.
 - *OpenAdmin > Users* table now indicates dedicated ip address for user.
