--- a/website/docs/changelog/1.5.0.md
+++ b/website/docs/changelog/1.5.0.md
@@ -4,3 +4,5 @@ Not yet released.
 - new config `blacklist_useragents` is available, allowing administrators to [block useragents from accessing OpenPanel UI](https://raw.githubusercontent.com/stefanpejcic/openpanel-configuration/refs/heads/main/openpanel/conf/blacklist_useragents.txt).
 
 ### 🐛 Bug Fixes
+- fixed bug with `found_a_bug_link` missing in OpenPanel UI pages.
+- 
