--- a/website/docs/changelog/1.5.0.md
+++ b/website/docs/changelog/1.5.0.md
@@ -6,4 +6,5 @@ Not yet released.
 ### 🐛 Bug Fixes
 - fixed bug with `found_a_bug_link` missing in OpenPanel UI pages.
 - [Cannot set Roundcube Webmail domain #568](https://github.com/stefanpejcic/OpenPanel/issues/568)
+- [opencli commands does not work #571](https://github.com/stefanpejcic/OpenPanel/issues/571)
 - 
