--- a/website/docs/changelog/1.5.0.md
+++ b/website/docs/changelog/1.5.0.md
@@ -7,4 +7,4 @@ Not yet released.
 - fixed bug with `found_a_bug_link` missing in OpenPanel UI pages.
 - [Cannot set Roundcube Webmail domain #568](https://github.com/stefanpejcic/OpenPanel/issues/568)
 - [opencli commands does not work #571](https://github.com/stefanpejcic/OpenPanel/issues/571)
-- 
+- [DNS Zone Editor does not display DKIM key properly #572](https://github.com/stefanpejcic/OpenPanel/issues/572)
