--- a/website/docs/changelog/1.5.0.md
+++ b/website/docs/changelog/1.5.0.md
@@ -8,3 +8,4 @@ Not yet released.
 - [Cannot set Roundcube Webmail domain #568](https://github.com/stefanpejcic/OpenPanel/issues/568)
 - [opencli commands does not work #571](https://github.com/stefanpejcic/OpenPanel/issues/571)
 - [DNS Zone Editor does not display DKIM key properly #572](https://github.com/stefanpejcic/OpenPanel/issues/572)
+- [fail2ban in email settings does not work #574](https://github.com/stefanpejcic/OpenPanel/issues/574)
