--- a/website/docs/changelog/1.5.0.md
+++ b/website/docs/changelog/1.5.0.md
@@ -1,9 +1,10 @@
 Not yet released.
 
 ### 💅 Polish
+- [OpenPanel 2 OpenPanel migrations #21](https://github.com/stefanpejcic/OpenPanel/issues/21)
 - new config `blacklist_useragents` is available, allowing administrators to [block useragents from accessing OpenPanel UI](https://raw.githubusercontent.com/stefanpejcic/openpanel-configuration/refs/heads/main/openpanel/conf/blacklist_useragents.txt).
 - redesigned OpenAdmin Login page.
-- [`opencli transfer-user` BETA](https://i.postimg.cc/GLzTvbR3/2025-07-17-18-18.png)
+- [`opencli transfer-user` command](https://dev.openpanel.com/cli/users.html#Transfer-User)
 
 ### 🐛 Bug Fixes
 - fixed bug with `found_a_bug_link` missing in OpenPanel UI pages.
