--- a/website/docs/changelog/1.5.0.md
+++ b/website/docs/changelog/1.5.0.md
@@ -5,6 +5,7 @@ Not yet released.
 - new config `blacklist_useragents` is available, allowing administrators to [block useragents from accessing OpenPanel UI](https://raw.githubusercontent.com/stefanpejcic/openpanel-configuration/refs/heads/main/openpanel/conf/blacklist_useragents.txt).
 - redesigned OpenAdmin Login page.
 - [`opencli transfer-user` command](https://dev.openpanel.com/cli/users.html#Transfer-User)
+- improved `/json/user_activity_status` route on OpenAdmin.
 
 ### 🐛 Bug Fixes
 - [CSF Blocklists does not work as intended #573](https://github.com/stefanpejcic/OpenPanel/issues/573)
