--- a/website/docs/changelog/1.5.0.md
+++ b/website/docs/changelog/1.5.0.md
@@ -6,6 +6,7 @@ Not yet released.
 - redesigned OpenAdmin Login page.
 - [`opencli transfer-user` command](https://dev.openpanel.com/cli/users.html#Transfer-User)
 - improved `/json/user_activity_status` route on OpenAdmin.
+- *OpenAdmin > Users* table now has indicators if user is currently online (session is active).
 
 ### 🐛 Bug Fixes
 - [CSF Blocklists does not work as intended #573](https://github.com/stefanpejcic/OpenPanel/issues/573)
