--- a/website/docs/changelog/1.5.0.md
+++ b/website/docs/changelog/1.5.0.md
@@ -15,3 +15,4 @@ Not yet released.
 - [opencli commands does not work #571](https://github.com/stefanpejcic/OpenPanel/issues/571)
 - [DNS Zone Editor does not display DKIM key properly #572](https://github.com/stefanpejcic/OpenPanel/issues/572)
 - [fail2ban in email settings does not work #574](https://github.com/stefanpejcic/OpenPanel/issues/574)
+- fixed css bug causing Notificaitons item to be displayed in OpenAdmin menu for Resellers.
