--- a/website/docs/changelog/1.5.0.md
+++ b/website/docs/changelog/1.5.0.md
@@ -2,7 +2,8 @@ Not yet released.
 
 ### 💅 Polish
 - [OpenPanel 2 OpenPanel migrations #21](https://github.com/stefanpejcic/OpenPanel/issues/21)
-- added [support for 3rd party plugins](/docs/articles/dev-experience/custom-plugins) in OpenPanel UI. ([example plugin](https://github.com/stefanpejcic/traceroute))
+- added [support for 3rd party plugins](/docs/articles/dev-experience/custom-plugins) in OpenPanel UI.
+- ([example plugin for OpenPanel](https://github.com/stefanpejcic/traceroute))
 - new config `blacklist_useragents` is available, allowing administrators to [block useragents from accessing OpenPanel UI](https://raw.githubusercontent.com/stefanpejcic/openpanel-configuration/refs/heads/main/openpanel/conf/blacklist_useragents.txt).
 - redesigned OpenAdmin Login page.
 - [`opencli transfer-user` command](https://dev.openpanel.com/cli/users.html#Transfer-User)
