--- a/website/docs/changelog/1.5.0.md
+++ b/website/docs/changelog/1.5.0.md
@@ -18,3 +18,5 @@ Not yet released.
 - [DNS Zone Editor does not display DKIM key properly #572](https://github.com/stefanpejcic/OpenPanel/issues/572)
 - [fail2ban in email settings does not work #574](https://github.com/stefanpejcic/OpenPanel/issues/574)
 - fixed css bug causing Notificaitons item to be displayed in OpenAdmin menu for Resellers.
+- fixed bug that allowed setting panel domain to be already in use by OpenPanel account.
+- 
