--- a/website/docs/changelog/1.5.0.md
+++ b/website/docs/changelog/1.5.0.md
@@ -20,4 +20,4 @@ Not yet released.
 - [fail2ban in email settings does not work #574](https://github.com/stefanpejcic/OpenPanel/issues/574)
 - fixed css bug causing Notificaitons item to be displayed in OpenAdmin menu for Resellers.
 - fixed bug that allowed setting panel domain to be already in use by OpenPanel account.
-- 
+- fixed html bug on *OpenAdmin > Users > single user* Edit tab that restricted username to 16 characters.
