--- a/website/docs/changelog/1.5.0.md
+++ b/website/docs/changelog/1.5.0.md
@@ -10,6 +10,7 @@ Not yet released.
 - improved `/json/user_activity_status` route on OpenAdmin.
 - *OpenAdmin > Users* table now has indicators if user is currently online (session is active).
 - hostname domain is now checked against user domains and restricted domains list.
+- `security.txt` and `robots.txt` files are now published on every update.
 
 ### 🐛 Bug Fixes
 - [CSF Blocklists does not work as intended #573](https://github.com/stefanpejcic/OpenPanel/issues/573)
