--- a/website/docs/changelog/1.5.0.md
+++ b/website/docs/changelog/1.5.0.md
@@ -4,6 +4,7 @@ Not yet released.
 - [OpenPanel 2 OpenPanel migrations #21](https://github.com/stefanpejcic/OpenPanel/issues/21)
 - added [support for 3rd party plugins](/docs/articles/dev-experience/custom-plugins) in OpenPanel UI.
 - [example plugin for OpenPanel](https://github.com/stefanpejcic/traceroute)
+- [*OpenPanel > FTP > Accounts* now offers users an option to download configuration files for Filezilla and Cyberduck](https://i.postimg.cc/02WW2ktQ/2025-07-21-18-46.png).
 - new config `blacklist_useragents` is available, allowing administrators to [block useragents from accessing OpenPanel UI](https://raw.githubusercontent.com/stefanpejcic/openpanel-configuration/refs/heads/main/openpanel/conf/blacklist_useragents.txt).
 - redesigned OpenAdmin Login page.
 - [`opencli transfer-user` command](https://dev.openpanel.com/cli/users.html#Transfer-User)
