--- a/website/docs/changelog/1.5.0.md
+++ b/website/docs/changelog/1.5.0.md
@@ -24,3 +24,4 @@ Not yet released.
 - fixed bug that allowed setting panel domain to be already in use by OpenPanel account.
 - fixed html bug on *OpenAdmin > Users > single user* Edit tab that restricted username to 16 characters.
 - fixed css issue on *OpenPanel > Emails > Create New* form with the username field not being full-width.
+- fixed incorrect redirect after email creation on *OpenPanel > Emails > Create New* page.
