--- a/website/docs/changelog/1.5.0.md
+++ b/website/docs/changelog/1.5.0.md
@@ -5,8 +5,10 @@ Not yet released.
 - added [support for 3rd party plugins](/docs/articles/dev-experience/custom-plugins) in OpenPanel UI.
 - [example plugin for OpenPanel](https://github.com/stefanpejcic/traceroute)
 - [*OpenPanel > FTP > Accounts* now offers users an option to download configuration files for Filezilla and Cyberduck](https://i.postimg.cc/02WW2ktQ/2025-07-21-18-46.png).
+- *OpenPanel > Emails > Accounts > Connect Devices* now offers users an option to download configuration files for Outlook and Thunderbird.
 - new config `blacklist_useragents` is available, allowing administrators to [block useragents from accessing OpenPanel UI](https://raw.githubusercontent.com/stefanpejcic/openpanel-configuration/refs/heads/main/openpanel/conf/blacklist_useragents.txt).
-- redesigned OpenAdmin Login page.
+- redesigned *OpenAdmin > Login* page.
+- [redesigned *OpenPanel > Emails > Connect Devices* page](https://i.postimg.cc/J8TbzF4Z/2025-07-21-19-18.png).
 - [`opencli transfer-user` command](https://dev.openpanel.com/cli/users.html#Transfer-User)
 - improved `/json/user_activity_status` route on OpenAdmin.
 - *OpenAdmin > Users* table now has indicators if user is currently online (session is active).
