--- a/website/docs/changelog/1.5.0.md
+++ b/website/docs/changelog/1.5.0.md
@@ -10,6 +10,8 @@ Not yet released.
 - redesigned *OpenAdmin > Login* page.
 - [redesigned *OpenPanel > Emails > Connect Devices* page](https://i.postimg.cc/J8TbzF4Z/2025-07-21-19-18.png).
 - [`opencli transfer-user` command](https://dev.openpanel.com/cli/users.html#Transfer-User)
+- [OWASP CRS](https://owasp.org/www-project-modsecurity-core-rule-set/) is now automatically updated monthly.
+- [`opencli waf-update`](https://dev.openpanel.com/cli/waf.html#Update) and `opencli waf-update log` commands.
 - improved `/json/user_activity_status` route on OpenAdmin.
 - *OpenAdmin > Users* table now has indicators if user is currently online (session is active).
 - hostname domain is now checked against user domains and restricted domains list.
