--- a/website/docs/changelog/1.5.0.md
+++ b/website/docs/changelog/1.5.0.md
@@ -29,3 +29,4 @@ Not yet released.
 - fixed html bug on *OpenAdmin > Users > single user* Edit tab that restricted username to 16 characters.
 - fixed css issue on *OpenPanel > Emails > Create New* form with the username field not being full-width.
 - fixed incorrect redirect after email creation on *OpenPanel > Emails > Create New* page.
+- fixed css bug with phpmyamdin link showing in WP Manager even when feature is disabled.
