--- a/website/docs/changelog/1.5.0.md
+++ b/website/docs/changelog/1.5.0.md
@@ -30,3 +30,6 @@ Not yet released.
 - fixed css issue on *OpenPanel > Emails > Create New* form with the username field not being full-width.
 - fixed incorrect redirect after email creation on *OpenPanel > Emails > Create New* page.
 - fixed css bug with phpmyamdin link showing in WP Manager even when feature is disabled.
+- fixed bug on WP Manager with 'Debugging' tab not returning information.
+- fixed bug on WPManger with message 'Quota limit exceeded for Google PageSpeed API. Please add an API Key' not displayed.
+- 
