--- a/website/docs/changelog/1.5.0.md
+++ b/website/docs/changelog/1.5.0.md
@@ -31,5 +31,5 @@ Not yet released.
 - fixed incorrect redirect after email creation on *OpenPanel > Emails > Create New* page.
 - fixed css bug with phpmyamdin link showing in WP Manager even when feature is disabled.
 - fixed bug on WP Manager with 'Debugging' tab not returning information.
-- fixed bug on WPManger with message 'Quota limit exceeded for Google PageSpeed API. Please add an API Key' not displayed.
+- [fixed bug on WP Manager with message 'Quota limit exceeded for Google PageSpeed API. Please add an API Key' not displayed](https://i.postimg.cc/DwvnbQk6/2025-07-22-13-05.png).
 - 
