--- a/website/docs/changelog/1.5.0.md
+++ b/website/docs/changelog/1.5.0.md
@@ -16,6 +16,7 @@ Not yet released.
 - *OpenAdmin > Users* table now has indicators if user is currently online (session is active).
 - hostname domain is now checked against user domains and restricted domains list.
 - `security.txt` and `robots.txt` files are now published on every update.
+- *ip_blocker* module is removed.
 
 ### 🐛 Bug Fixes
 - [CSF Blocklists does not work as intended #573](https://github.com/stefanpejcic/OpenPanel/issues/573)
