--- a/website/docs/changelog/1.5.1.md
+++ b/website/docs/changelog/1.5.1.md
@@ -2,3 +2,6 @@ Not yet released.
 
 ### 🐛 Bug Fixes
 - fixed bug with `x-model="username" on *OpenAdmin > Login* page.
+- fixed error `Option g is ambiguous (gecos, gid, group)` when creating ftp users.
+- fixed error `sh: usermod: not found` deleting ftp users. 
+- fixed a bug that prevented deletion of FTP sub-accounts when deleting an OpenPanel account if the FTP service was not running.
