--- a/website/docs/changelog/1.5.0.md
+++ b/website/docs/changelog/1.5.0.md
@@ -7,7 +7,7 @@ Released on July 22, 2025
 - [*OpenPanel > FTP > Accounts* now offers users an option to download configuration files for Filezilla and Cyberduck](https://i.postimg.cc/02WW2ktQ/2025-07-21-18-46.png).
 - *OpenPanel > Emails > Accounts > Connect Devices* now offers users an option to download configuration files for Outlook and Thunderbird.
 - new config `blacklist_useragents` is available, allowing administrators to [block useragents from accessing OpenPanel UI](https://raw.githubusercontent.com/stefanpejcic/openpanel-configuration/refs/heads/main/openpanel/conf/blacklist_useragents.txt).
-- redesigned *OpenAdmin > Login* page.
+- [redesigned *OpenAdmin > Login* page](https://i.postimg.cc/7DJWpPRW/2025-07-22-15-41.png).
 - [redesigned *OpenPanel > Emails > Connect Devices* page](https://i.postimg.cc/J8TbzF4Z/2025-07-21-19-18.png).
 - [`opencli transfer-user` command](https://dev.openpanel.com/cli/users.html#Transfer-User)
 - [OWASP CRS](https://owasp.org/www-project-modsecurity-core-rule-set/) is now automatically updated monthly.
