--- a/website/docs/changelog/1.5.1.md
+++ b/website/docs/changelog/1.5.1.md
@@ -1,5 +1,8 @@
 Not yet released.
 
+### 💅 Polish
+- `opencli config update email` command will now also update the email for LFD alerts.
+
 ### 🐛 Bug Fixes
 - fixed bug with `x-model="username" on *OpenAdmin > Login* page.
 - fixed error `Option g is ambiguous (gecos, gid, group)` when creating ftp users.
