--- a/website/docs/changelog/1.5.1.md
+++ b/website/docs/changelog/1.5.1.md
@@ -8,3 +8,5 @@ Not yet released.
 - fixed error `Option g is ambiguous (gecos, gid, group)` when creating ftp users.
 - fixed error `sh: usermod: not found` deleting ftp users. 
 - fixed a bug that prevented deletion of FTP sub-accounts when deleting an OpenPanel account if the FTP service was not running.
+- fixed bug with 404 errors on OpenAdmin not checking if user is logged in before rendering template.
+- 
