--- a/website/docs/changelog/1.5.1.md
+++ b/website/docs/changelog/1.5.1.md
@@ -9,4 +9,4 @@ Not yet released.
 - fixed error `sh: usermod: not found` deleting ftp users. 
 - fixed a bug that prevented deletion of FTP sub-accounts when deleting an OpenPanel account if the FTP service was not running.
 - fixed bug with 404 errors on OpenAdmin not checking if user is logged in before rendering template.
-- 
+- [Disabling email services does not work #577](https://github.com/stefanpejcic/OpenPanel/issues/577)
