--- a/website/docs/changelog/1.5.1.md
+++ b/website/docs/changelog/1.5.1.md
@@ -11,3 +11,4 @@ Not yet released.
 - fixed bug with 404 errors on OpenAdmin not checking if user is logged in before rendering template.
 - [Disabling email services does not work #577](https://github.com/stefanpejcic/OpenPanel/issues/577)
 - [Emails randomly blocked, Suspend/Allow email does not work #28](https://github.com/stefanpejcic/OpenPanel/issues/578)
+- fixed error saving changes in GrapeJS editor.
