--- a/website/docs/changelog/1.5.1.md
+++ b/website/docs/changelog/1.5.1.md
@@ -16,3 +16,4 @@ Not yet released.
 - fixed csrf error saving changes in GrapeJS editor.
 - [Cannot remove Node app #567](https://github.com/stefanpejcic/OpenPanel/issues/567)
 - [email 993 IMAP port does not work #575](https://github.com/stefanpejcic/OpenPanel/issues/575)
+- fixed *Error loading speed data* on SiteManager.
