--- a/website/docs/changelog/1.5.1.md
+++ b/website/docs/changelog/1.5.1.md
@@ -4,7 +4,7 @@ Not yet released.
 - `opencli config update email` command will now also update the email for LFD alerts.
 - [`opencli user-check` command](https://dev.openpanel.com/cli/users.html#Check) to analyze security and files for a user.
 - admin service restart now validates if configuration files exist before starting OpenAdmin.
-- optimized wp-admin auto-login process from WP Manager.
+- faster auto-login to wp-admin from WP Manager.
 - descriptive error messages for failed auto-login using WP Manager.
 
 
