--- a/website/docs/changelog/1.5.1.md
+++ b/website/docs/changelog/1.5.1.md
@@ -6,6 +6,7 @@ Not yet released.
 - admin service restart now validates if configuration files exist before starting OpenAdmin.
 - faster auto-login to wp-admin from WP Manager.
 - descriptive error messages for failed auto-login using WP Manager.
+- 'Quota limit exceeded for Google PageSpeed API. Please add an API Key.' error on WPManager is now displayed once every 24h.
 
 
 ### 🐛 Bug Fixes
