--- a/website/docs/changelog/1.5.1.md
+++ b/website/docs/changelog/1.5.1.md
@@ -7,6 +7,7 @@ Not yet released.
 - faster auto-login to wp-admin from WP Manager.
 - descriptive error messages for failed auto-login using WP Manager.
 - 'Quota limit exceeded for Google PageSpeed API. Please add an API Key.' error on WPManager is now displayed once every 24h.
+- redesigned 'Files' and 'Database' widgets on WP Manager.
 
 
 ### 🐛 Bug Fixes
@@ -21,3 +22,4 @@ Not yet released.
 - [Cannot remove Node app #567](https://github.com/stefanpejcic/OpenPanel/issues/567)
 - [email 993 IMAP port does not work #575](https://github.com/stefanpejcic/OpenPanel/issues/575)
 - fixed *Error loading speed data* on SiteManager.
+- fixed bug that caused OpenAdmin files not to be updated if any files in `/usr/local/admin/` were modified.
