--- a/website/docs/changelog/1.5.1.md
+++ b/website/docs/changelog/1.5.1.md
@@ -23,3 +23,5 @@ Not yet released.
 - [email 993 IMAP port does not work #575](https://github.com/stefanpejcic/OpenPanel/issues/575)
 - fixed *Error loading speed data* on SiteManager.
 - fixed bug that caused OpenAdmin files not to be updated if any files in `/usr/local/admin/` were modified.
+- [Bug in OpenAdmin UI: search not working on Cron Jobs #576](https://github.com/stefanpejcic/OpenPanel/issues/576)
+- 
