--- a/website/docs/changelog/1.5.1.md
+++ b/website/docs/changelog/1.5.1.md
@@ -25,3 +25,4 @@ Not yet released.
 - fixed bug that caused OpenAdmin files not to be updated if any files in `/usr/local/admin/` were modified.
 - [Bug in OpenAdmin UI: search not working on Cron Jobs #576](https://github.com/stefanpejcic/OpenPanel/issues/576)
 - fixed bug on WP Manager with showing backups for websites.
+- fixed bug on Website Builder > Installer that allowed user to create multiple sites on same domain.
