--- a/website/docs/changelog/1.5.1.md
+++ b/website/docs/changelog/1.5.1.md
@@ -8,6 +8,7 @@ Not yet released.
 - descriptive error messages for failed auto-login using WP Manager.
 - 'Quota limit exceeded for Google PageSpeed API. Please add an API Key.' error on WPManager is now displayed once every 24h.
 - redesigned 'Files' and 'Database' widgets on WP Manager.
+- improvements to Site Manager interface.
 
 
 ### 🐛 Bug Fixes
