--- a/website/docs/changelog/1.5.1.md
+++ b/website/docs/changelog/1.5.1.md
@@ -9,7 +9,8 @@ Not yet released.
 - 'Quota limit exceeded for Google PageSpeed API. Please add an API Key.' error on WPManager is now displayed once every 24h.
 - redesigned 'Files' and 'Database' widgets on WP Manager.
 - improvements to Site Manager interface.
-
+- 'VirtualHost Editor' is now migrated to a separate module.
+- Editing VirtualHost file for domain is now logged in user activity log.
 
 ### 🐛 Bug Fixes
 - [Implement password strength indicator on all password fields #580](https://github.com/stefanpejcic/OpenPanel/issues/580)
