--- a/website/docs/changelog/1.5.1.md
+++ b/website/docs/changelog/1.5.1.md
@@ -1,6 +1,7 @@
 Not yet released.
 
 ### 💅 Polish
+- [Implement password strength indicator on all password fields #580](https://github.com/stefanpejcic/OpenPanel/issues/580)
 - `opencli config update email` command will now also update the email for LFD alerts.
 - [`opencli user-check` command](https://dev.openpanel.com/cli/users.html#Check) to analyze security and files for a user.
 - admin service restart now validates if configuration files exist before starting OpenAdmin.
