--- a/website/docs/changelog/1.5.1.md
+++ b/website/docs/changelog/1.5.1.md
@@ -12,6 +12,7 @@ Not yet released.
 - improvements to Site Manager interface.
 - 'VirtualHost Editor' is now migrated to a separate module.
 - Editing VirtualHost file for domain is now logged in user activity log.
+- Opening *OpenPanel > Crons* page no longer waits for container to start in order to access the page.
 
 ### 🐛 Bug Fixes
 - [Implement password strength indicator on all password fields #580](https://github.com/stefanpejcic/OpenPanel/issues/580)
