--- a/website/docs/changelog/1.5.1.md
+++ b/website/docs/changelog/1.5.1.md
@@ -32,3 +32,4 @@ Not yet released.
 - [Bug in OpenAdmin UI: search not working on Cron Jobs #576](https://github.com/stefanpejcic/OpenPanel/issues/576)
 - fixed bug on WP Manager with showing backups for websites.
 - fixed bug on Website Builder > Installer that allowed user to create multiple sites on same domain.
+- fixed bug checking if files already exists before starting WordPress installation, when subdirectory is not used.
