--- a/website/docs/changelog/1.5.1.md
+++ b/website/docs/changelog/1.5.1.md
@@ -1,6 +1,7 @@
 Not yet released.
 
 ### 💅 Polish
+- Optimized the processes for adding domains and installing WordPress.
 - [Implement password strength indicator on all password fields #580](https://github.com/stefanpejcic/OpenPanel/issues/580)
 - `opencli config update email` command will now also update the email for LFD alerts.
 - [`opencli user-check` command](https://dev.openpanel.com/cli/users.html#Check) to analyze security and files for a user.
@@ -13,7 +14,6 @@ Not yet released.
 - 'VirtualHost Editor' is now migrated to a separate module.
 - Editing VirtualHost file for domain is now logged in user activity log.
 - Opening *OpenPanel > Crons*, *OpenPanel > MySQL > Databases*, *OpenPanel > MySQL > Users* pages no longer waits for container to start in order to access the page.
-- optimized `domains-add` process.
 
 ### 🐛 Bug Fixes
 - [Implement password strength indicator on all password fields #580](https://github.com/stefanpejcic/OpenPanel/issues/580)
