--- a/website/docs/changelog/1.5.1.md
+++ b/website/docs/changelog/1.5.1.md
@@ -14,6 +14,7 @@ Not yet released.
 - 'VirtualHost Editor' is now migrated to a separate module.
 - Editing VirtualHost file for domain is now logged in user activity log.
 - Opening *OpenPanel > Crons*, *OpenPanel > MySQL > Databases*, *OpenPanel > MySQL > Users* pages no longer waits for container to start in order to access the page.
+- All `opencli` commands now purge cache for *OpenPanel > Dashboard* page.
 
 ### 🐛 Bug Fixes
 - [Implement password strength indicator on all password fields #580](https://github.com/stefanpejcic/OpenPanel/issues/580)
