--- a/website/docs/changelog/1.5.1.md
+++ b/website/docs/changelog/1.5.1.md
@@ -1,6 +1,7 @@
 Not yet released.
 
 ### 💅 Polish
+- *OpenPanel > Emails > Address Importer*.
 - Optimized the processes for adding domains and installing WordPress.
 - [Implement password strength indicator on all password fields #580](https://github.com/stefanpejcic/OpenPanel/issues/580)
 - `opencli config update email` command will now also update the email for LFD alerts.
