--- a/website/docs/changelog/1.5.2.md
+++ b/website/docs/changelog/1.5.2.md
@@ -1,3 +1,4 @@
 Not yet released.
 
 ### 🐛 Bug Fixes
+- fixed bug on FileManager that caused extract not to work if `filemanager_extract_max_time` value was modified.
