--- a/website/docs/changelog/1.5.1.md
+++ b/website/docs/changelog/1.5.1.md
@@ -35,3 +35,4 @@ Released on July 25, 2025
 - fixed bug on WP Manager with showing backups for websites.
 - fixed bug on Website Builder > Installer that allowed user to create multiple sites on same domain.
 - fixed bug checking if files already exists before starting WordPress installation, when subdirectory is not used.
+- [Error when creating email account #588](https://github.com/stefanpejcic/OpenPanel/issues/588)
