--- a/website/docs/changelog/1.5.2.md
+++ b/website/docs/changelog/1.5.2.md
@@ -2,6 +2,7 @@ Not yet released.
 
 ### 💅 Polish
 - Creating user will now pre-download docker images: webserver, mysql and default php version.
+- auto-login from OpenAdmin is now possible for Reseller users as well.
 
 ### 🐛 Bug Fixes
 - fixed bug on FileManager that caused extract not to work if `filemanager_extract_max_time` value was modified.
