--- a/website/docs/changelog/1.5.2.md
+++ b/website/docs/changelog/1.5.2.md
@@ -5,6 +5,7 @@ Not yet released.
 - auto-login from OpenAdmin is now possible for Reseller users as well.
 - added search and enable/disable all toggles on *OpenAdmin > Settings > Modules*.
 - [Switches UX improvement for Features #545](https://github.com/stefanpejcic/OpenPanel/discussions/545)
+- [improved error messages on *OpenAdmin > Plans*](https://i.postimg.cc/CLyhz4g6/2025-07-28-10-48.png).
 
 ### 🐛 Bug Fixes
 - fixed bug on FileManager that caused extract not to work if `filemanager_extract_max_time` value was modified.
