--- a/website/docs/changelog/1.5.2.md
+++ b/website/docs/changelog/1.5.2.md
@@ -13,4 +13,5 @@ Not yet released.
 - fixed bug on FileManager that caused extract not to work if `filemanager_extract_max_time` value was modified.
 - [Bug in OpenPanel UI on /emails/import doesn't accept semicolon separators #590](https://github.com/stefanpejcic/OpenPanel/issues/590#issuecomment-3121668773)
 - fixed error `NameError: name 'nginx_conf_path' is not defined` when removing NodeJS/Python applications.
+- fixed bug on `/php/domains` page when same php version is set for domain as the current version.
 
