--- a/website/docs/changelog/1.5.2.md
+++ b/website/docs/changelog/1.5.2.md
@@ -8,6 +8,7 @@ Not yet released.
 - [improved error messages on *OpenAdmin > Plans*](https://i.postimg.cc/CLyhz4g6/2025-07-28-10-48.png).
 - [Disk Usage Summary on *OpenAdmin > single user* page](https://i.postimg.cc/8pwhSjLY/2025-07-28-11-28.png).
 - When changing PHP version for a domain on *OpenPanel > PHP > Select PHP version*, service will not start if there are not enough resources.
+- Added links to documentaiton for Backup Destinations on `/backups/destination`.
 
 ### 🐛 Bug Fixes
 - fixed bug on FileManager that caused extract not to work if `filemanager_extract_max_time` value was modified.
