--- a/website/docs/changelog/1.5.2.md
+++ b/website/docs/changelog/1.5.2.md
@@ -16,3 +16,4 @@ Not yet released.
 - fixed error `NameError: name 'nginx_conf_path' is not defined` when removing NodeJS/Python applications.
 - fixed bug on `/php/domains` page when same php version is set for domain as the current version.
 - fixed bug on 2FA widget button causing redirect to `/api/account/2fa`.
+- fixed error on `/process-manager` when container is restarting.
