--- a/website/docs/changelog/1.5.2.md
+++ b/website/docs/changelog/1.5.2.md
@@ -9,7 +9,8 @@ Not yet released.
 - [Disk Usage Summary on *OpenAdmin > single user* page](https://i.postimg.cc/8pwhSjLY/2025-07-28-11-28.png).
 - When changing PHP version for a domain on *OpenPanel > PHP > Select PHP version*, service will not start if there are not enough resources.
 - Added links to documentaiton for Backup Destinations on `/backups/destination`.
-- added better email validations on `/emails/import`. 
+- improved email validation and more-descriptive error messages on `/emails/import`.
+- `.xlsx` extension is now supported on `/emails/import`.
 
 ### 🐛 Bug Fixes
 - fixed bug on FileManager that caused extract not to work if `filemanager_extract_max_time` value was modified.
